# live-bootcamp-project

./: README.md  bacon.toml  compose.yml  docker.bat  docker.sh
.github/workflows/: prod.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-011a6bf24d5506cd94e15b03485714bfdab6a845aa83219eff9a835a23f45785.json  query-2ed81b958a14422419edb95ba92d2a20df76d52fae7abc13a34499a1bad9cc4a.json  query-ba3ae04bd8ceae08141cb81b9653a9677f776f2f20f286d2f81bf57129ff1170.json
auth-service/migrations/: 20250508090256_create_users_table.up.sql
auth-service/src/: app_state.rs  domain.rs  lib.rs  main.rs  routes.rs  services.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: data_stores.rs  email_clients.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/services/email_clients/: postmark_email_client.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
