[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reqwest = { version = "0.11.26", default-features = false, features = [
    "json",
    "cookies",
] }
fake = { version = "4" }
quickcheck = "1"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
regex = "1.8.5"
async-trait = "0.1.78"
axum-extra = { version = "0.9.2", features = ["cookie"] }
jsonwebtoken = "9.2"
chrono = "0.4"
dotenvy = "0.15.7"
lazy_static = "1.4"
rand = "0.8.5"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
